# idtrace

./: .gitignore  README.md  pyproject.toml
example/: .env.example  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
example/app/: layout.tsx  page.tsx
example/components/: add-button.tsx  cancel-button.tsx  form-button.tsx  message-card.tsx  message-list.tsx  object-card.tsx  object-create-form.tsx  object-selector.tsx  simple-button.tsx  text-box.tsx  user-indicator.tsx  user-picker.tsx  vid-card.tsx  vid-list.tsx
example/lib/client/: client-base.ts  client-routes.ts  client.ts
example/lib/models/: item.ts  link.ts  message.ts  object.ts  user.ts  vid.ts
example/lib/utilities/: format-utilities.ts  type-utilities.ts
example/styles/: globals.css
idtrace/: __init__.py
idtrace/app/: app.py  db.py  service_routes.py  vid_model.py  vid_routes.py
idtrace/cli/: cli.py
tests/: test_version.py
